fix: Insta link changed to my personal account

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="/">
                 <a class="footer-pills" href="https://github.com/samyakshah3008">Github</a>
                 <a class="footer-pills" href="https://twitter.com/SamyakShah_18">Twitter</a>
-                <a  class="footer-pills" href="https://www.instagram.com/codersam_18/">Instagram</a>
+                <a  class="footer-pills" href="https://www.instagram.com/samyakshah_18/">Instagram</a>
              </div>
              
         </footer>
