--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         </div>
         <div>
         <label class="label" for="initial-price">Initial price:</label>
-        <input class="input" id="initial-price" type="number" placeholder="Enter initial price">
+        <input class="input" id="initial-price" type="number" min="0" placeholder="Enter initial price">
     </div>
     <div>
         <label class="label" for="stocks-quantity"> No. of stocks:
-            <input class="input" id="stocks-quantity" type="number" placeholder="Enter the Number of stocks bought">
+            <input class="input" id="stocks-quantity" type="number" min="0" placeholder="Enter the Number of stocks bought">
         </label>
     </div>
     <div>
         <label class="label" for="current-price">Current price:
-            <input class="input" id="current-price" type="number" placeholder="Enter current price of stocks">
+            <input class="input" id="current-price" type="number" min="0" placeholder="Enter current price of stocks">
         </label>
     </div>
     <div>
